2014-06-27  Glenn Morris  <rgm@gnu.org>

	* Makefile.in: Replace BOOTSTRAPEMACS sleight-of-hand
	with an order-only dependence on bootstrap-emacs.  (Bug#2151)
	(.el.elc): Replace suffix rule with pattern rule.
	(%.elc): New pattern rule, with order-only prerequisite.
	($(lisp)): No more need to depend on BOOTSTRAPEMACS.
	($(lispsource)/loaddefs.el): Use an order-only prerequisite
	in place of BOOTSTRAPEMACS.

2014-06-26  Dmitry Antipov  <dmantipov@yandex.ru>

	* fns.c (Fcompare_strings): Use FETCH_STRING_CHAR_AS_MULTIBYTE_ADVANCE.

2014-06-25  Dmitry Antipov  <dmantipov@yandex.ru>

	Consistently use validate_subarray to verify substring.
	* fns.c (validate_substring): Not static any more.  Adjust to
	use ptrdiff_t, not EMACS_INT, because string and vector limits
	can't exceed ptrdiff_t even if EMACS_INT is wider.
	(Fcompare_strings, Fsubstring, Fsubstring_no_properties)
	(secure_hash): Adjust user.
	* lisp.h (validate_subarray): Add prototype.
	* coding.c (Fundecodable_char_position):
	* composite.c (Fcomposition_get_gstring, Fcompose_string_internal):
	Use validate_subarray.  Adjust comment to mention substring.

2014-06-25  Dmitry Antipov  <dmantipov@yandex.ru>

	Do not allow out-of-range character position in Fcompare_strings.
	* fns.c (validate_subarray): Add prototype.
	(Fcompare_substring): Use validate_subarray to check ranges.
	Adjust comment to mention that the semantics was changed.  Also see
	http://lists.gnu.org/archive/html/emacs-devel/2014-06/msg00447.html.

2014-06-24  Paul Eggert  <eggert@cs.ucla.edu>

	Be more consistent about the 'Qfoo' naming convention.
	* image.c (Fimagemagick_types):
	* lisp.h (lisp_h_CHECK_TYPE, CHECK_TYPE, CHECK_ARRAY):
	* process.c (Fmake_network_process):
	Rename C local identifier 'Qfoo to avoid giving the false
	impression that it stands for the symbol 'foo'.

2014-06-23  Dmitry Antipov  <dmantipov@yandex.ru>

	Simplify and cleanup character conversion stuff.