@@ -1,3 +1,9 @@
+2014-06-28  K. Handa  <handa@gnu.org>
+
+	* coding.c (MAX_CHARBUF_SIZE): Renamed from CHARBUF_SIZE.
+	(MIN_CHARBUF_SIZE): New macro.
+	(ALLOC_CONVERSION_WORK_AREA): New arg SIZE.  Callers changed.
+
 2014-06-27  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Replace BOOTSTRAPEMACS sleight-of-hand
